force-app/main/default/objects/Change_List_PMT__c/Change_List_PMT__c.object-meta.xml
<CustomObject>
    <label>Change List</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Change List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>