force-app/main/default/objects/Change_List_PMT__c/fields/Change_Request_PMT__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request</label>
    <referenceTo>Change_Request_PMT__c</referenceTo>
    <relationshipLabel>Change List</relationshipLabel>
    <relationshipName>Change_List</relationshipName>
    <type>Lookup</type>
</CustomField>