force-app/main/default/objects/Change_List_PMT__c/fields/Comment_PMT__c.field-meta.xml
<CustomField>
    <fullName>Comment_PMT__c</fullName>
    <label>Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>