force-app/main/default/objects/Change_List_PMT__c/fields/Item_PMT__c.field-meta.xml
<CustomField>
    <fullName>Item_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item_PMT__c</referenceTo>
    <relationshipLabel>Change List</relationshipLabel>
    <relationshipName>Change_List</relationshipName>
    <type>Lookup</type>
</CustomField>